Correct alignment elements

--- a/src/components/views/Login/Login.module.scss
+++ b/src/components/views/Login/Login.module.scss
@@ -3,13 +3,11 @@
 .component {
   padding: $base-size;
   width: 500px;
-  // border: solid 2px green;
   margin: 100px auto;
   align-items: center;
 }
 
 .container {
-  // border: solid 2px red;
   width: 350px;
   margin-left: auto;
   margin-right: auto;
@@ -18,7 +16,7 @@
 }
 
 .login {
-  width: 218px;
+  width: 214px;
 }
 
 .input {
